@@ -80,3 +80,4 @@ Thanks
   * Carsten Bormann: A suggestion.
   * Davide Rambaldi: A suggestion.
   * Yusuke ENDOH: reports a bug.
+  * Yuta Taniguchi: a bug fix patch.
